--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,11 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://15.207.19.60:9000/</sonar.host.url>
+		<sonar.host.url>http://35.154.232.117:9000/</sonar.host.url>
+		<sonar.login>c5f3b3d56d76709c5d41accdb6492dc28bc82057</sonar.login>
+		<!--
                 <sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>  
+		<sonar.password>admin</sonar.password>  -->
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
