--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,11 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.134.252.68:9000/projects</sonar.host.url>
-		<sonar.login>admin</sonar.login>
+		<sonar.login>2fb95a4cb207ed541419a0498cbd0928a8f23ff3</sonar.login>
+		
+		<!--<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> -->
+		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
